--- a/home-2.html
+++ b/home-2.html
@@ -8,7 +8,7 @@
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
-    <title>Autora - Construction Business HTMl Template</title>
+    <title>HB(Hafarb BuildWorks)</title>
 
     <meta name="author" content="themesflat.com">
 
@@ -44,8 +44,8 @@
                     <div class="top-bar-inner-wrap">
                         <div class="top-bar-content">
                             <div class="inner">
-                                <span class="address content">4946 Marmora Road, Central New</span>
-                                <span class="phone content">+61 3 8376 6284</span>
+                                <span class="address content">HB BuildingWorks Inc. (USA)</span>
+                                <span class="phone content">+1 (773)901-0254</span>
                                 <span class="time content">Mon-Sat: 8am - 6pm</span>
                             </div>                            
                         </div><!-- /.top-bar-content -->
