--- a/page-contact.html
+++ b/page-contact.html
@@ -42,11 +42,11 @@
                 <div id="top-bar-inner" class="container">
                     <div class="top-bar-inner-wrap">
                         <div class="top-bar-content">
-                            <div class="inner">
-                                <span class="address content">4946 Marmora Road, Central New</span>
-                                <span class="phone content">+61 3 8376 6284</span>
+                           <div class="inner">
+                                <span class="address content">HB BuildingWorks Inc. (USA)</span>
+                                <span class="phone content">+1 (773)901-0254</span>
                                 <span class="time content">Mon-Sat: 8am - 6pm</span>
-                            </div>                            
+                            </div>                                
                         </div><!-- /.top-bar-content -->
 
                         <div class="top-bar-socials">
@@ -71,7 +71,7 @@
                         <div id="site-logo" class="clearfix">
                             <div id="site-log-inner">
                                 <a href="index.html" rel="home" class="main-logo">
-                                    <img src="assets/img/logo-small.png" alt="Autora" width="186" height="39" data-retina="assets/img/logo-small@2x.png" data-width="186" data-height="39">
+                                    <img src="assets/img/logo-small.png" alt="HB(Hafarb) BuildWorks" width="186" height="39" data-retina="assets/img/logo-small@2x.png" data-width="186" data-height="39">
                                 </a>
                             </div>
                         </div><!-- /#site-logo -->
