--- a/page-projects-full.html
+++ b/page-projects-full.html
@@ -43,11 +43,11 @@
                 <div id="top-bar-inner" class="container">
                     <div class="top-bar-inner-wrap">
                         <div class="top-bar-content">
-                            <div class="inner">
-                                <span class="address content">4946 Marmora Road, Central New</span>
-                                <span class="phone content">+61 3 8376 6284</span>
+                           <div class="inner">
+                                <span class="address content">HB BuildingWorks Inc. (USA)</span>
+                                <span class="phone content">+1 (773)901-0254</span>
                                 <span class="time content">Mon-Sat: 8am - 6pm</span>
-                            </div>                            
+                            </div>                               
                         </div><!-- /.top-bar-content -->
 
                         <div class="top-bar-socials">
