--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                                 <span class="icons">
                                     <a href="#"><i class="fa fa-facebook"></i></a>
                                     <a href="#"><i class="fa fa-twitter"></i></a>
-                                    <a href="#"><i class="fa fa-pinterest-p"></i></a>
-                                    <a href="#"><i class="fa fa-rss"></i></a>
+                                    <!-- <a href="#"><i class="fa fa-pinterest-p"></i></a>
+                                    <a href="#"><i class="fa fa-rss"></i></a> -->
                                 </span>
                             </div>
                         </div><!-- /.top-bar-socials -->
@@ -72,7 +72,7 @@
                         <div id="site-logo" class="clearfix">
                             <div id="site-log-inner">
                                 <a href="index.html" rel="home" class="main-logo">
-                                    <img src="assets/img/logo-small.png" alt="HB(Hafarb) BuildWorks" width="186" height="39" data-retina="assets/img/logo-small@2x.png" data-width="186" data-height="39">
+                                    <img src="" alt="HB(Hafarb) BuildWorks" width="186" height="39" data-retina="assets/img/logo-small@2x.png" data-width="186" data-height="39">
                                 </a>
                             </div>
                         </div><!-- /#site-logo -->
@@ -86,7 +86,7 @@
                                 <li class="menu-item menu-item-has-children current-menu-item">
                                     <a href="index.html">HOME</a>
                                     <ul class="sub-menu">
-                                        <li class="menu-item current-item"><a href="index.html">HOME 1</a></li>
+                                        <!-- <li class="menu-item current-item"><a href="index.html">HOME 1</a></li> -->
                                         <li class="menu-item"><a href="home-2.html">HOME 2</a></li>
                                     </ul>
                                 </li>
