--- a/page-about-careers.html
+++ b/page-about-careers.html
@@ -93,9 +93,9 @@
                                     <a href="page-about.html">ABOUT US </a>
                                     <ul class="sub-menu">
                                         <li class="menu-item"><a href="page-about.html">ABOUT US</a></li>
-                                        <li class="menu-item"><a href="page-about-detail.html">ABOUT DETAIL</a></li>
+                                        <!-- <li class="menu-item"><a href="page-about-detail.html">ABOUT DETAIL</a></li>
                                         <li class="menu-item"><a href="page-about-team.html">ABOUT TEAM</a></li>
-                                        <li class="menu-item current-item"><a href="page-about-careers.html">ABOUT CAREERS</a></li>
+                                        <li class="menu-item current-item"><a href="page-about-careers.html">ABOUT CAREERS</a></li> -->
                                     </ul>
                                 </li>
                                 <li class="menu-item menu-item-has-children">
