--- a/page-blog.html
+++ b/page-blog.html
@@ -55,8 +55,8 @@
                                 <span class="icons">
                                     <a href="#"><i class="fa fa-facebook"></i></a>
                                     <a href="#"><i class="fa fa-twitter"></i></a>
-                                    <a href="#"><i class="fa fa-pinterest-p"></i></a>
-                                    <a href="#"><i class="fa fa-rss"></i></a>
+                                    <!-- <a href="#"><i class="fa fa-pinterest-p"></i></a>
+                                    <a href="#"><i class="fa fa-rss"></i></a> -->
                                 </span>
                             </div>
                         </div><!-- /.top-bar-socials -->
@@ -71,7 +71,7 @@
                         <div id="site-logo" class="clearfix">
                             <div id="site-log-inner">
                                 <a href="index.html" rel="home" class="main-logo">
-                                    <img src="assets/img/logo-small.png" alt="HB(Hafarb) BuildWorks"width="186" height="39" data-retina="assets/img/logo-small@2x.png" data-width="186" data-height="39">
+                                    <img src="assets/img/logo-small.png" alt="HB(Hafarb) BuildWorks" width="186" height="39" data-retina="assets/img/logo-small@2x.png" data-width="186" data-height="39">
                                 </a>
                             </div>
                         </div><!-- /#site-logo -->
@@ -93,15 +93,15 @@
                                     <a href="page-about.html">ABOUT US </a>
                                     <ul class="sub-menu">
                                         <li class="menu-item"><a href="page-about.html">ABOUT US</a></li>
-                                        <li class="menu-item"><a href="page-about-detail.html">ABOUT DETAIL</a></li>
+                                        <!-- <li class="menu-item"><a href="page-about-detail.html">ABOUT DETAIL</a></li>
                                         <li class="menu-item"><a href="page-about-team.html">ABOUT TEAM</a></li>
-                                        <li class="menu-item"><a href="page-about-careers.html">ABOUT CAREERS</a></li>
+                                        <li class="menu-item"><a href="page-about-careers.html">ABOUT CAREERS</a></li> -->
                                     </ul>
                                 </li>
                                 <li class="menu-item menu-item-has-children">
                                     <a href="page-services.html">SERVICES</a>
                                     <ul class="sub-menu">
-                                        <li class="menu-item"><a href="page-services.html">SERVICES</a></li>
+                                        <!-- <li class="menu-item"><a href="page-services.html">SERVICES</a></li> -->
                                         <li class="menu-item"><a href="page-services-detail.html">SERVICES DETAIL</a></li>
                                     </ul>
                                 </li>
