--- a/page-about-team.html
+++ b/page-about-team.html
@@ -85,8 +85,8 @@
                                 <li class="menu-item menu-item-has-children">
                                     <a href="index.html">HOME</a>
                                     <ul class="sub-menu">
-                                        <li class="menu-item"><a href="index.html">HOME 1</a></li>
-                                        <li class="menu-item"><a href="home-2.html">HOME 2</a></li>
+                                        <!-- <li class="menu-item"><a href="index.html">HOME 1</a></li> -->
+                                        <li class="menu-item"><a href="home-2.html">HOME</a></li>
                                     </ul>
                                 </li>
                                 <li class="menu-item menu-item-has-children current-menu-item">
