--- a/page-services-detail.html
+++ b/page-services-detail.html
@@ -86,7 +86,7 @@
                                 <li class="menu-item menu-item-has-children">
                                     <a href="index.html">HOME</a>
                                     <ul class="sub-menu">
-                                        <li class="menu-item"><a href="index.html">HOME 1</a></li>
+                                        <!-- <li class="menu-item"><a href="index.html">HOME 1</a></li> -->
                                         <li class="menu-item"><a href="home-2.html">HOME 2</a></li>
                                     </ul>
                                 </li>
