--- a/page-about-detail.html
+++ b/page-about-detail.html
@@ -106,33 +106,33 @@
                                         <li class="menu-item"><a href="page-services-detail.html">SERVICES DETAIL</a></li>
                                     </ul>
                                 </li>
-                                <li class="menu-item menu-item-has-children">
+                               <li class="menu-item menu-item-has-children">
                                     <a href="page-projects.html">PROJECTS</a>
                                     <ul class="sub-menu">
                                         <li class="menu-item"><a href="page-projects.html">PROJECTS</a></li>
-                                        <li class="menu-item"><a href="page-projects-full.html">PROJECTS FULL WIDTH</a></li>
-                                        <li class="menu-item"><a href="page-project-detail.html">PROJECTS DETAIL</a></li>
+                                        <!-- <li class="menu-item"><a href="page-projects-full.html">PROJECTS FULL WIDTH</a></li>
+                                        <li class="menu-item"><a href="page-project-detail.html">PROJECTS DETAIL</a></li> -->
                                     </ul>
                                 </li>
-                                <li class="menu-item menu-item-has-children">
+                                <li class="menu-item menu-item-has-children" >
                                     <a href="page-testimonial.html">PAGE</a>
                                     <ul class="sub-menu">
                                         <li class="menu-item"><a href="page-testimonial.html">PAGE TESTIMONIAL</a></li>
-                                        <li class="menu-item"><a href="page-pricing.html">PAGE PRICING</a></li>
+                                        <!-- <li class="menu-item"><a href="page-pricing.html">PAGE PRICING</a></li> -->
                                     </ul>
                                 </li>
-                                <li class="menu-item menu-item-has-children">
+                                <!-- <li class="menu-item menu-item-has-children">
                                     <a href="page-blog.html">BLOG</a>
                                     <ul class="sub-menu right-sub-menu">
                                         <li class="menu-item"><a href="page-blog.html">BLOG</a></li>
                                         <li class="menu-item"><a href="page-blog-single.html">BLOG SINGLE</a></li>
                                     </ul>
-                                </li>
+                                </li> -->
                                 <li class="menu-item menu-item-has-children">
                                     <a href="page-contact.html">CONTACT</a>
                                     <ul class="sub-menu right-sub-menu">
                                         <li class="menu-item"><a href="page-contact.html">CONTACT 1</a></li>
-                                        <li class="menu-item"><a href="page-contact-2.html">CONTACT 2</a></li>
+                                        <!-- <li class="menu-item"><a href="page-contact-2.html">CONTACT 2</a></li> -->
                                     </ul>
                                 </li>
                             </ul>
