The seventh commit

--- a/home-2.html
+++ b/home-2.html
@@ -208,7 +208,7 @@
                                                 data-splitin="none" 
                                                 data-splitout="none" 
                                                 data-responsive_offset="on">
-                                                Design-Build | Construction Management |
+                                                <!-- Design-Build | Construction Management | -->
                                             </div>
 
                                             <div class="tp-caption tp-resizeme text-white font-heading font-weight-700"
@@ -228,7 +228,7 @@
                                                 data-splitin="none" 
                                                 data-splitout="none" 
                                                 data-responsive_offset="on">
-                                                | Real Estate Development |
+                                                <!-- | Real Estate Development | -->
                                             </div>
 
                                             <div class="tp-caption "
@@ -294,7 +294,7 @@
                                                 data-splitin="none" 
                                                 data-splitout="none" 
                                                 data-responsive_offset="on">
-                                                Design-Build | Construction Management |
+                                                <!-- Design-Build | Construction Management | -->
                                             </div>
 
                                             <div class="tp-caption tp-resizeme text-white font-heading font-weight-700 text-center"
@@ -314,7 +314,7 @@
                                                 data-splitin="none" 
                                                 data-splitout="none" 
                                                 data-responsive_offset="on">
-                                               | Real Estate Development |
+                                               <!-- | Real Estate Development | -->
                                             </div>
 
                                             <div class="tp-caption text-center"
@@ -380,7 +380,7 @@
                                                 data-splitin="none" 
                                                 data-splitout="none" 
                                                 data-responsive_offset="on">
-                                                Design-Build | Construction Management |
+                                                <!-- Design-Build | Construction Management | -->
                                             </div>
 
                                             <div class="tp-caption tp-resizeme text-white font-heading font-weight-700 text-right"
@@ -400,7 +400,7 @@
                                                 data-splitin="none" 
                                                 data-splitout="none" 
                                                 data-responsive_offset="on">
-                                                | Real Estate Development |
+                                                <!-- | Real Estate Development | -->
                                             </div>
 
                                             <div class="tp-caption text-right"
