--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                                                 data-splitin="none" 
                                                 data-splitout="none" 
                                                 data-responsive_offset="on">
-                                                Design-Build | Construction Management |
+                                                <!-- Design-Build | Construction Management | -->
                                             </div>
 
                                             <div class="tp-caption tp-resizeme text-white font-heading font-weight-700"
@@ -227,7 +227,7 @@
                                                 data-splitin="none" 
                                                 data-splitout="none" 
                                                 data-responsive_offset="on">
-                                                | Real Estate Development |
+                                                <!-- | Real Estate Development | -->
                                             </div>
 
                                             <div class="tp-caption "
@@ -293,7 +293,7 @@
                                                 data-splitin="none" 
                                                 data-splitout="none" 
                                                 data-responsive_offset="on">
-                                                Design-Build | Construction Management |
+                                                <!-- Design-Build | Construction Management | -->
                                             </div>
 
                                             <div class="tp-caption tp-resizeme text-white font-heading font-weight-700 text-center"
@@ -313,7 +313,7 @@
                                                 data-splitin="none" 
                                                 data-splitout="none" 
                                                 data-responsive_offset="on">
-                                               | Real Estate Development |
+                                               <!-- | Real Estate Development | -->
                                             </div>
 
                                             <div class="tp-caption text-center"
@@ -379,7 +379,7 @@
                                                 data-splitin="none" 
                                                 data-splitout="none" 
                                                 data-responsive_offset="on">
-                                                Design-Build | Construction Management |
+                                                <!-- Design-Build | Construction Management | -->
                                             </div>
 
                                             <div class="tp-caption tp-resizeme text-white font-heading font-weight-700 text-right"
@@ -399,7 +399,7 @@
                                                 data-splitin="none" 
                                                 data-splitout="none" 
                                                 data-responsive_offset="on">
-                                                | Real Estate Development |
+                                                <!-- | Real Estate Development | -->
                                             </div>
 
                                             <div class="tp-caption text-right"
