The seventh commit

--- a/home-2.html
+++ b/home-2.html
@@ -170,8 +170,7 @@
                                             <!-- Main Image -->
                                             <img src="assets/img/slider/slider-bg-4.jpg" alt="" data-bgposition="center center" data-no-retina>
                                            
-                                            <!-- Layers -->
-                                            <div class="tp-caption tp-resizeme text-white font-heading font-weight-600 "
+                                           <div class="tp-caption tp-resizeme text-white font-heading font-weight-600 "
                                                 data-x="['left','left','left','center']" data-hoffset="['0','0','0','0']"
                                                 data-y="['middle','middle','middle','middle']" data-voffset="['-90','-90','-90','-90']"
                                                 data-fontsize="['20','20','20','16']"
@@ -208,7 +207,7 @@
                                                 data-splitin="none" 
                                                 data-splitout="none" 
                                                 data-responsive_offset="on">
-                                                <!-- Design-Build | Construction Management | -->
+                                               Design-Build (Residential & Commercial)
                                             </div>
 
                                             <div class="tp-caption tp-resizeme text-white font-heading font-weight-700"
@@ -228,7 +227,7 @@
                                                 data-splitin="none" 
                                                 data-splitout="none" 
                                                 data-responsive_offset="on">
-                                                <!-- | Real Estate Development | -->
+                                                Renovation & Adaptive Reuse
                                             </div>
 
                                             <div class="tp-caption "
@@ -294,7 +293,7 @@
                                                 data-splitin="none" 
                                                 data-splitout="none" 
                                                 data-responsive_offset="on">
-                                                <!-- Design-Build | Construction Management | -->
+                                                 Design-Build (Residential & Commercial)
                                             </div>
 
                                             <div class="tp-caption tp-resizeme text-white font-heading font-weight-700 text-center"
@@ -314,7 +313,7 @@
                                                 data-splitin="none" 
                                                 data-splitout="none" 
                                                 data-responsive_offset="on">
-                                               <!-- | Real Estate Development | -->
+                                               Renovation & Adaptive Reuse
                                             </div>
 
                                             <div class="tp-caption text-center"
@@ -425,7 +424,7 @@
                                     </ul>
                                 </div> 
                             </div>
-                            <!-- END SLIDER -->
+             <!-- END SLIDER -->
 
                             <!-- SERVICES -->
                             <div class="row-services">
