The seventh commit

--- a/home-2.html
+++ b/home-2.html
@@ -207,7 +207,7 @@
                                                 data-splitin="none" 
                                                 data-splitout="none" 
                                                 data-responsive_offset="on">
-                                               Design-Build (Residential & Commercial)
+                                               Design-Build
                                             </div>
 
                                             <div class="tp-caption tp-resizeme text-white font-heading font-weight-700"
@@ -293,7 +293,7 @@
                                                 data-splitin="none" 
                                                 data-splitout="none" 
                                                 data-responsive_offset="on">
-                                                 Design-Build (Residential & Commercial)
+                                                 Design-Build
                                             </div>
 
                                             <div class="tp-caption tp-resizeme text-white font-heading font-weight-700 text-center"
