--- a/index.html
+++ b/index.html
@@ -169,8 +169,7 @@
                                         <li data-transition="random">
                                             <!-- Main Image -->
                                             <img src="assets/img/slider/slider-bg-2.jpg" alt="" data-bgposition="center center" data-no-retina>
-                                           
-<div class="tp-caption tp-resizeme text-white font-heading font-weight-600 "
+                       <div class="tp-caption tp-resizeme text-white font-heading font-weight-600 "
                                                 data-x="['left','left','left','center']" data-hoffset="['0','0','0','0']"
                                                 data-y="['middle','middle','middle','middle']" data-voffset="['-90','-90','-90','-90']"
                                                 data-fontsize="['20','20','20','16']"
@@ -207,7 +206,7 @@
                                                 data-splitin="none" 
                                                 data-splitout="none" 
                                                 data-responsive_offset="on">
-                                               Design-Build (Residential & Commercial)
+                                               Design-Build
                                             </div>
 
                                             <div class="tp-caption tp-resizeme text-white font-heading font-weight-700"
@@ -293,7 +292,7 @@
                                                 data-splitin="none" 
                                                 data-splitout="none" 
                                                 data-responsive_offset="on">
-                                                 Design-Build (Residential & Commercial)
+                                                 Design-Build
                                             </div>
 
                                             <div class="tp-caption tp-resizeme text-white font-heading font-weight-700 text-center"
@@ -424,6 +423,7 @@
                                     </ul>
                                 </div> 
                             </div>
+
                    
                             <!-- END SLIDER -->
 
