--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                                                 data-splitin="none" 
                                                 data-splitout="none" 
                                                 data-responsive_offset="on">
-                                                <!-- Design-Build | Construction Management | -->
+                                                Design-Build
                                             </div>
 
                                             <div class="tp-caption tp-resizeme text-white font-heading font-weight-700 text-right"
@@ -398,7 +398,7 @@
                                                 data-splitin="none" 
                                                 data-splitout="none" 
                                                 data-responsive_offset="on">
-                                                <!-- | Real Estate Development | -->
+                                                 Renovation & Adaptive Reuse
                                             </div>
 
                                             <div class="tp-caption text-right"
