--- a/home-2.html
+++ b/home-2.html
@@ -399,7 +399,7 @@
                                                 data-splitin="none" 
                                                 data-splitout="none" 
                                                 data-responsive_offset="on">
-                                               Renovation & Adaptive Reuse
+                                                <!-- | Real Estate Development | -->
                                             </div>
 
                                             <div class="tp-caption text-right"
