--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                                         <div class="col-md-12">
                                             <div class="themesflat-spacer clearfix" data-desktop="60" data-mobile="60" data-smobile="60"></div>
                                             <div class="themesflat-headings style-1 text-center clearfix">
-                                                <h2 class="heading">YOUR BEST CHOOSE</h2>
+                                                <h2 class="heading">DEVELOPMENT-FOCUSED MINDSET</h2>
                                                 <div class="sep has-icon width-125 clearfix">
                                                     <div class="sep-icon">
                                                         <span class="sep-icon-before sep-center sep-solid"></span>
@@ -442,7 +442,7 @@
                                                         <span class="sep-icon-after sep-center sep-solid"></span>
                                                     </div>
                                                 </div>
-                                                <p class="sub-heading">More than 500 projects completed in Autora - With over 25 years of combined experience, we have the knowledge to serve you.</p>
+                                                <p class="sub-heading">Design-Build | Construction Management | Real Estate Development</p>
                                             </div>
                                             <div class="themesflat-spacer clearfix" data-desktop="42" data-mobile="35" data-smobile="35"></div>
                                         </div><!-- /.col-md-12 -->
