--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
                                                     <div class="text-wrap">
                                                         <h5 class="heading"><a href="#">BEST QUALITY</a></h5>
                                                         <div class="sep clearfix"></div>
-                                                        <p class="sub-heading">Autora Construction Services are committed to meeting the highest quality standards without compromising our safety culture..</p>
+                                                        <p class="sub-heading">HB (Hafarb) BuildWorks are committed to meeting the highest quality standards without compromising our safety culture..</p>
                                                     </div>
                                                 </div><!-- /.themesflat-icon-box -->
                                             </div><!-- /.themesflat-content-box -->                                         
@@ -473,7 +473,7 @@
                                                     <div class="text-wrap">
                                                         <h5 class="heading"><a href="#">ON TIME</a></h5>
                                                         <div class="sep clearfix"></div>
-                                                        <p class="sub-heading">At our company, we respect the customer’s time and schedule and always complete the projects on timely fashion way.</p>
+                                                        <p class="sub-heading">At HB (Hafarb) BuildWorks, we respect the customer’s time and schedule and always complete the projects on timely fashion way.</p>
                                                     </div>
                                                 </div><!-- /.themesflat-icon-box -->
                                             </div><!-- /.themesflat-content-box -->
