--- a/index.html
+++ b/index.html
@@ -519,9 +519,9 @@
                                             <div class="themesflat-spacer clearfix" data-desktop="64" data-mobile="60" data-smobile="60"></div>
                                             <div class="themesflat-content-box clearfix" data-margin="0 25% 0 4.5%" data-mobilemargin="0 0 0 4.5%">
                                                 <div class="themesflat-headings style-1 clearfix">
-                                                    <h2 class="heading">WELCOME TO AUTORA</h2>
+                                                    <h2 class="heading">WELCOME TO HB (Hafarb) BuildWorks</h2>
                                                     <div class="sep has-width w80 accent-bg margin-top-11 clearfix"></div>                                               
-                                                    <p class="sub-heading margin-top-30">We have successfully completed projects in numerous states across the continental United States. Autora Construction Services has a proven track record of:</p>
+                                                    <p class="sub-heading margin-top-30">HB (Hafarb) BuildWorks is a Chicago-based design-build, construction management, and real estate development firm delivering projects that balance design excellence, construction efficiency, and long-term asset value.</p>
                                                 </div>
                                                 <div class="themesflat-spacer clearfix" data-desktop="26" data-mobile="35" data-smobile="35"></div>
                                                 <div class="content-list">
