--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
                                                         <div class="inner">
                                                             <span class="item">
                                                                 <span class="icon"><i class="fa fa-check-square"></i></span>
-                                                                <span class="text">Completing projects on time & Following budget guidelines</span>
+                                                                <span class="text">Design-Build (Residential & Commercial)</span>
                                                             </span>
                                                         </div>
                                                     </div><!-- /.themeslat-list -->
@@ -537,7 +537,7 @@
                                                         <div class="inner">
                                                             <span class="item">
                                                                 <span class="icon"><i class="fa fa-check-square"></i></span>
-                                                                <span class="text">Elevated quality of workmanship</span>
+                                                                <span class="text">Construction Management & Owner’s Representation</span>
                                                             </span>
                                                         </div>
                                                     </div><!-- /.themeslat-list -->
@@ -545,7 +545,7 @@
                                                         <div class="inner">
                                                             <span class="item">
                                                                 <span class="icon"><i class="fa fa-check-square"></i></span>
-                                                                <span class="text">Meeting diverse supplier requirements</span>
+                                                                <span class="text">Real Estate Development Planning & Feasibility</span>
                                                             </span>
                                                         </div>
                                                     </div><!-- /.themeslat-list -->
@@ -553,7 +553,7 @@
                                                         <div class="inner">
                                                             <span class="item">
                                                                 <span class="icon"><i class="fa fa-check-square"></i></span>
-                                                                <span class="text">Implementing appropriate safety precautions and procedures</span>
+                                                                <span class="text">Scheduling & Project Controls (Primavera P6, MS Project)</span>
                                                             </span>
                                                         </div>
                                                     </div><!-- /.themeslat-list -->
