--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
                                                         <span class="sep-icon-after sep-center sep-solid"></span>
                                                     </div>
                                                 </div>
-                                                <p class="sub-heading">Construction Services offers a full range of construction services from initial design to project completion.</p>
+                                                <p class="sub-heading">HB (Hafarb) BuildWorks offers a full range of services from initial design to project completion.</p>
                                             </div>
                                             <div class="themesflat-spacer clearfix" data-desktop="39" data-mobile="35" data-smobile="35"></div>
                                             <div class="themesflat-carousel-box data-effect clearfix" data-gap="30" data-column="3" data-column2="2" data-column3="1" data-auto="false">
@@ -598,7 +598,7 @@
                                                                     <div class="overlay-effect bg-color-accent"></div>
                                                                 </div>
                                                                 <div class="text-wrap">
-                                                                    <h5 class="heading"><a href="#">DESIGN & BUILD</a></h5>
+                                                                    <h5 class="heading"><a href="#">Design-Build (Residential & Commercial)</a></h5>
                                                                     <span class="icon-wrap">
                                                                         <i class="fa fa-angle-right"></i>
                                                                     </span>
@@ -615,7 +615,7 @@
                                                                     <div class="overlay-effect bg-color-accent"></div>
                                                                 </div>
                                                                 <div class="text-wrap">
-                                                                    <h5 class="heading"><a href="#">BUILDING ENVELOPES</a></h5>
+                                                                    <h5 class="heading"><a href="#">Renovation & Adaptive Reuse</a></h5>
                                                                     <span class="icon-wrap">
                                                                         <i class="fa fa-angle-right"></i>
                                                                     </span>
@@ -632,7 +632,7 @@
                                                                     <div class="overlay-effect bg-color-accent"></div>
                                                                 </div>
                                                                 <div class="text-wrap">
-                                                                    <h5 class="heading"><a href="#">CONSTRUCTION</a></h5>
+                                                                    <h5 class="heading"><a href="#">Construction Management & Owner’s Representation</a></h5>
                                                                     <span class="icon-wrap">
                                                                         <i class="fa fa-angle-right"></i>
                                                                     </span>
