--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
                                                                     <div class="overlay-effect bg-color-accent"></div>
                                                                 </div>
                                                                 <div class="text-wrap">
-                                                                    <h5 class="heading"><a href="#">Design-Build (Residential & Commercial)</a></h5>
+                                                                    <h5 class="heading"><a href="#">DESIGN & BUILD</a></h5>
                                                                     <span class="icon-wrap">
                                                                         <i class="fa fa-angle-right"></i>
                                                                     </span>
@@ -615,7 +615,7 @@
                                                                     <div class="overlay-effect bg-color-accent"></div>
                                                                 </div>
                                                                 <div class="text-wrap">
-                                                                    <h5 class="heading"><a href="#">Renovation & Adaptive Reuse</a></h5>
+                                                                    <h5 class="heading"><a href="#">BUILDING ENVELOPES</a></h5>
                                                                     <span class="icon-wrap">
                                                                         <i class="fa fa-angle-right"></i>
                                                                     </span>
@@ -632,7 +632,7 @@
                                                                     <div class="overlay-effect bg-color-accent"></div>
                                                                 </div>
                                                                 <div class="text-wrap">
-                                                                    <h5 class="heading"><a href="#">Construction Management & Owner’s Representation</a></h5>
+                                                                    <h5 class="heading"><a href="#">CONSTRUCTION</a></h5>
                                                                     <span class="icon-wrap">
                                                                         <i class="fa fa-angle-right"></i>
                                                                     </span>
