--- a/index.html
+++ b/index.html
@@ -934,7 +934,7 @@
                                                 </div>
                                                 <div class="text-wrap">
                                                     <h5 class="heading"><a href="#">DESIGN-BUILD</a></h5>
-                                                    <p class="sub-heading">Beyond construction delivery, HB (Hafarb) BuildWorks brings a development-focused mindset, supporting feasibility analysis, cost modeling, and owner representation to help clients and investors make informed, value-driven decisions.</p>
+                                                    <p class="sub-heading">We develop and understand project expectations and then manage those needs with a design team. Innovation should happen throughout a project. </p>
                                                 </div>
                                             </div><!-- /.themesflat-icon-box -->
                                             <div class="themesflat-spacer clearfix" data-desktop="62" data-mobile="35" data-smobile="35"></div>
@@ -944,7 +944,7 @@
                                                 </div>
                                                 <div class="text-wrap">
                                                     <h5 class="heading"><a href="#">PRECONSTRUCTION SERVICES</a></h5>
-                                                    <p class="sub-heading margin-top-18">Our work is guided by BIM-enabled coordination, Lean construction principles, and disciplined project controls, ensuring clarity, efficiency, and value throughout the project lifecycle.</p>
+                                                    <p class="sub-heading margin-top-18">Autora Construction Services provides the right resources and expertise to evaluate concepts through our industry leading Preconstruction Services team.</p>
                                                 </div>
                                             </div><!-- /.themesflat-icon-box -->                                      
                                         </div><!-- /.col-md-4 -->
@@ -957,7 +957,7 @@
                                                 </div>
                                                 <div class="text-wrap">
                                                     <h5 class="heading"><a href="#">CONSTRUCTION MANAGEMENT</a></h5>
-                                                    <p class="sub-heading">Beyond construction delivery, HB (Hafarb) BuildWorks brings a development-focused mindset, supporting feasibility analysis, cost modeling, and owner representation to help clients and investors make informed, value-driven decisions.</p>
+                                                    <p class="sub-heading">We work closely with architects and designers to understand the project, and ultimately develop a targeted solution that optimizes every stage of the build. </p>
                                                 </div>
                                             </div><!-- /.themesflat-icon-box -->
                                             <div class="themesflat-spacer clearfix" data-desktop="62" data-mobile="35" data-smobile="35"></div>
@@ -967,7 +967,7 @@
                                                 </div>
                                                 <div class="text-wrap">
                                                     <h5 class="heading"><a href="#">BUILDING ENVELOPES</a></h5>
-                                                    <p class="sub-heading margin-top-18">Built on a strong foundation in architecture, construction engineering, and management, we integrate planning, execution, and project controls to deliver high-quality outcomes on time and within budget.</p>
+                                                    <p class="sub-heading margin-top-18">Our in-house cladding teams supply and install a diverse range of solutions to new building and building envelope upgrade projects. </p>
                                                 </div>
                                             </div><!-- /.themesflat-icon-box -->                                      
                                         </div><!-- /.col-md-4 -->
