--- a/index.html
+++ b/index.html
@@ -912,7 +912,7 @@
                                         <div class="col-md-12">
                                             <div class="themesflat-spacer clearfix" data-desktop="61" data-mobile="60" data-smobile="60"></div>
                                             <div class="themesflat-headings style-1 text-center clearfix">
-                                                <h2 class="heading font-size-30">ALL SERVICES</h2>
+                                                <h2 class="heading font-size-30">All HB (Hafarb) SERVICES</h2>
                                                 <div class="sep has-icon width-125 clearfix">
                                                     <div class="sep-icon">
                                                         <span class="sep-icon-before sep-center sep-solid"></span>
