--- a/index.html
+++ b/index.html
@@ -920,7 +920,7 @@
                                                         <span class="sep-icon-after sep-center sep-solid"></span>
                                                     </div>
                                                 </div>
-                                                <p class="sub-heading font-weight-400">Are you interested in finding out how we can make your project <br> a success? Please constact us.</p>
+                                                <p class="sub-heading font-weight-400">Design-Build | Construction Management | Real Estate Development<br></p>
                                             </div>
                                             <div class="themesflat-spacer clearfix" data-desktop="57" data-mobile="35" data-smobile="35"></div>
                                         </div><!-- /.col-md-12 -->
